--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.8.4",
     "axios": "^1.4.0",
     "history": "^5.3.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-datepicker": "^4.16.0",
