--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.8.4",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0",
     "history": "^5.3.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-data-table-component": "^7.5.4",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
@@ -19,6 +23,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "styled-components": "^6.0.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
